apps/gogs/overlays/librepod/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gogs
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`gogs.${BASE_DOMAIN}`)
    priority: 1
    middlewares:
    - name: oauth2-errors
      namespace: oauth2-proxy
    - name: oauth2-forwardauth
      namespace: oauth2-proxy
    services:
    - name: gogs
      port: 80
